force-app/main/default/objects/Contact/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <description>This shows the Contacts Role within an Organization and allows for more information about what they do with a company.</description>
    <inlineHelpText>Please select the Role Type for this Contact.</inlineHelpText>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>CEU Contact</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Contract Administrator</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Director of Operations</fullName>
            </value>
            <value>
                <fullName>Director of Sustainability</fullName>
            </value>
            <value>
                <fullName>Divisional President</fullName>
            </value>
            <value>
                <fullName>Estimator</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Junior Principal</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mid-Level Principal</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Owner/Principal</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Senior Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>