force-app/main/default/objects/Contact/fields/Roofing_Id__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Id__c</fullName>
    <externalId>true</externalId>
    <label>Roofing Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>