force-app/main/default/objects/Contact/fields/Roofing_Siding_Id__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Siding_Id__c</fullName>
    <formula>if(ISBLANK(Roofing_Id__c), Siding_Id__c, Roofing_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roofing Siding Id</label>
    <type>Text</type>
</CustomField>