force-app/main/default/objects/Contact/fields/Sales_Org_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Account_Name__c</fullName>
    <description>Sales Org + Accpunt Name (to view in search layouts and lookup fields)</description>
    <formula>Account.LOB__c &amp; &quot; &quot; &amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Account Name</label>
    <type>Text</type>
</CustomField>