force-app/main/default/objects/Contact/fields/Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is to signify if the contact should be sent a Customer Service Survey</description>
    <inlineHelpText>Should this contact be sent customer service surveys?</inlineHelpText>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>