force-app/main/default/objects/Contact/fields/SFDC_Synced_Contact__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Synced_Contact__c</fullName>
    <description>Temporary Field - will be Mapped to Outlook via User Defined Field</description>
    <formula>&quot;SFDC Synced Contact&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Synced Contact</label>
    <type>Text</type>
</CustomField>