force-app/main/default/objects/Contact/fields/Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Size__c</fullName>
    <label>Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>