force-app/main/default/objects/Contact/fields/Siding_Id__c.field-meta.xml
<CustomField>
    <fullName>Siding_Id__c</fullName>
    <externalId>true</externalId>
    <label>Siding Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>