force-app/main/default/objects/Contact/fields/SidingNPSSurvey__c.field-meta.xml
<CustomField>
    <fullName>SidingNPSSurvey__c</fullName>
    <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/Da5Sgrat?&amp;gf_q[8630580][17143978]=&quot; + FirstName + &quot;&amp;gf_q[8630580][17143979]=&quot; + LastName + &quot;&amp;gf_q[8630580][17143980]=&quot;+Title+&quot;&amp;gf_q[8630580][17143981]=&quot; + MailingPostalCode+&quot;&amp;gf_q[8630580][17143982]=&quot; + Phone+&quot;&amp;gf_q[8630580][17143983]=&quot;+ Email+ &quot;&amp;gf_q[8630580][17755758]=&quot;+ MailingState +&quot;&amp;ContactID=&quot;+Id +&quot;&amp;AccountID=&quot; + AccountId + &quot;&amp;UserID=&quot; + $User.Id , &quot;Start Siding NPS Survey&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siding NPS Survey</label>
    <type>Text</type>
</CustomField>