force-app/main/default/objects/Contact/fields/SimTek_Prod_Id__c.field-meta.xml
<CustomField>
    <fullName>SimTek_Prod_Id__c</fullName>
    <description>SimTek Production org record id</description>
    <label>SimTek Prod Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>