force-app/main/default/objects/Contact/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Hidden System Field.  Required for CTI/Alcatel integration.</description>
    <inlineHelpText>Hidden System Field.  Required for CTI/Alcatel integration.</inlineHelpText>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>