force-app/main/default/objects/Contact/fields/Survey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Date__c</fullName>
    <label>Survey Completion Date</label>
    <type>Date</type>
</CustomField>