force-app/main/default/objects/Contact/fields/Survey_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Email Sent</label>
    <type>Checkbox</type>
</CustomField>