force-app/main/default/objects/Contact/fields/Survey_Round__c.field-meta.xml
<CustomField>
    <fullName>Survey_Round__c</fullName>
    <label>Survey Round</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round 1</fullName>
            </value>
            <value>
                <fullName>Round 2</fullName>
            </value>
            <value>
                <fullName>Round 3</fullName>
            </value>
            <value>
                <fullName>Round 4</fullName>
            </value>
            <value>
                <fullName>Round 5</fullName>
            </value>
            <value>
                <fullName>Round 6</fullName>
            </value>
            <value>
                <fullName>Round 7</fullName>
            </value>
            <value>
                <fullName>Round 8</fullName>
            </value>
            <value>
                <fullName>Round 9</fullName>
            </value>
            <value>
                <fullName>Round 10</fullName>
            </value>
            <value>
                <fullName>Round 11</fullName>
            </value>
            <value>
                <fullName>Round 12</fullName>
            </value>
            <value>
                <fullName>Round 13</fullName>
            </value>
            <value>
                <fullName>Round 14</fullName>
            </value>
            <value>
                <fullName>Round 15</fullName>
            </value>
            <value>
                <fullName>Round 16</fullName>
            </value>
            <value>
                <fullName>Round 17</fullName>
            </value>
            <value>
                <fullName>Round 18</fullName>
            </value>
            <value>
                <fullName>Round 19</fullName>
            </value>
            <value>
                <fullName>Round 20</fullName>
            </value>
            <value>
                <fullName>Round 21</fullName>
            </value>
            <value>
                <fullName>Round 22</fullName>
            </value>
            <value>
                <fullName>Round 23</fullName>
            </value>
            <value>
                <fullName>Round 24</fullName>
            </value>
            <value>
                <fullName>Round 25</fullName>
            </value>
            <value>
                <fullName>Round 26</fullName>
            </value>
            <value>
                <fullName>Round 27</fullName>
            </value>
            <value>
                <fullName>Round 28</fullName>
            </value>
            <value>
                <fullName>Round 29</fullName>
            </value>
            <value>
                <fullName>Round 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>