force-app/main/default/objects/Contact/fields/Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Date__c</fullName>
    <description>This field is used for Gypsum NPS surveys to accommodate sending out list email from Contact list views to a percentage of Contact records.</description>
    <inlineHelpText>The date an email with a Gypsum NPS survey was sent to the Contact.</inlineHelpText>
    <label>Survey Sent Date</label>
    <type>Date</type>
</CustomField>