force-app/main/default/objects/Contact/fields/Telemar_BPCS_Contact__c.field-meta.xml
<CustomField>
    <fullName>Telemar_BPCS_Contact__c</fullName>
    <externalId>true</externalId>
    <label>Telemar/ Contact #</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>