force-app/main/default/objects/Contact/fields/Telemar_BPCS_Contact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Telemar_BPCS_Contact_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the contact came in from the Telemar/BPCS contact data load.  Unchecked otherwise.</inlineHelpText>
    <label>Telemar/ Contact Flag</label>
    <type>Checkbox</type>
</CustomField>