force-app/main/default/objects/Contact/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <label>Territory Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>