force-app/main/default/objects/Contact/fields/TM_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Number__c</fullName>
    <externalId>true</externalId>
    <label>TM#</label>
    <length>8</length>
    <type>Text</type>
</CustomField>