force-app/main/default/objects/Contact/fields/Transactional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Emails__c</fullName>
    <description>This field is used in the Marketing Cloud data extension to determine what type of emails should be sent to a Contact from Marketing Cloud.</description>
    <inlineHelpText>Please enter the type of emails this customer should receive.</inlineHelpText>
    <label>Transactional Emails</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RPG Pricing Communications</fullName>
            </value>
            <value>
                <fullName>RPG Customer Communications</fullName>
            </value>
            <value>
                <fullName>SPG Pricing Communications</fullName>
            </value>
            <value>
                <fullName>SPG Customer Communications</fullName>
            </value>
            <value>
                <fullName>Bufftech Customer Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>