force-app/main/default/objects/Contact/fields/uas__Active_User__c.field-meta.xml
<CustomField>
    <fullName>uas__Active_User__c</fullName>
    <formula>if(uas__User__r.IsActive,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <inlineHelpText>If this Contact is associated with a User record, this field displays whether or not the User record is Active.</inlineHelpText>
    <label>Active User</label>
    <type>Text</type>
</CustomField>