force-app/main/default/objects/Contact/fields/uas__User__c.field-meta.xml
<CustomField>
    <fullName>uas__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is by the User Contact Sync application by Applied Concepts Institute.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>