force-app/main/default/objects/Contact/fields/Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Status__c</fullName>
    <formula>IF(  Days_since_last_update__c  &lt;90, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015300000035QSR&quot;,&quot;Less than 90 Days&quot;,30,30) , 
IF( Days_since_last_update__c &lt;365, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015300000035QSW&quot;,&quot;90 to 365 Days&quot;,30,30), 
IF( Days_since_last_update__c &gt;365,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015300000035QSb&quot;,&quot;More than a Year&quot;,30,30) , 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015300000035QSb&quot;,&quot;More than 60 Days&quot;,30,30))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Status</label>
    <type>Text</type>
</CustomField>