force-app/main/default/objects/Contact/fields/VFCUSTSRV__c.field-meta.xml
<CustomField>
    <fullName>VFCUSTSRV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define a contact as VF Customer Service specifically for survey query.</description>
    <label>VFCUSTSRV</label>
    <type>Checkbox</type>
</CustomField>