force-app/main/default/objects/Contact/fields/WTU_Notes__c.field-meta.xml
<CustomField>
    <fullName>WTU_Notes__c</fullName>
    <description>What do you want to put on your Weekly Territory Update (WTU) about this Contact?</description>
    <inlineHelpText>What do you want to put on your Weekly Territory Update (WTU) about this Contact?</inlineHelpText>
    <label>WTU Notes</label>
    <type>TextArea</type>
</CustomField>