force-app/main/default/objects/Contact/fields/Zip_Code_Bank_Report__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Bank_Report__c</fullName>
    <formula>IF(MailingCountry = &apos;USA&apos; || MailingCountry = &apos;US&apos; || MailingCountry = &apos;United States&apos;, LEFT(MailingPostalCode, 5), MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Bank Report</label>
    <type>Text</type>
</CustomField>