force-app/main/default/objects/Contact/recordTypes/Archived_USA_Contact.recordType-meta.xml
<RecordType>
    <fullName>Archived_USA_Contact</fullName>
    <active>true</active>
    <description>This is an Admin Only record type which moves Inactive Contacts out of the fields view.</description>
    <label>Archived USA Contact</label>
</RecordType>