force-app/main/default/objects/Contact/recordTypes/Ceilings_Contact.recordType-meta.xml
<RecordType>
    <fullName>Ceilings_Contact</fullName>
    <active>true</active>
    <label>Ceilings Contact</label>
</RecordType>