force-app/main/default/objects/Contact/recordTypes/CertainTeed_Contact.recordType-meta.xml
<RecordType>
    <fullName>CertainTeed_Contact</fullName>
    <active>true</active>
    <label>CertainTeed Contact</label>
</RecordType>