force-app/main/default/objects/Contact/recordTypes/Gypsum_Canada_Contact.recordType-meta.xml
<RecordType>
    <fullName>Gypsum_Canada_Contact</fullName>
    <active>true</active>
    <label>Gypsum Canada Contact</label>
</RecordType>