force-app/main/default/objects/Contact/recordTypes/Gypsum_USA_Contact.recordType-meta.xml
<RecordType>
    <fullName>Gypsum_USA_Contact</fullName>
    <active>true</active>
    <label>Gypsum USA Contact</label>
</RecordType>