force-app/main/default/objects/Contact/recordTypes/Insulation_Contact.recordType-meta.xml
<RecordType>
    <fullName>Insulation_Contact</fullName>
    <active>true</active>
    <description>This record type is used for records coming from the insulation org.</description>
    <label>Insulation Contact</label>
</RecordType>