force-app/main/default/objects/Contact/validationRules/CCB_ELIGIBLE_BLANK_UPDATE.validationRule-meta.xml
<ValidationRule>
    <fullName>CCB_ELIGIBLE_BLANK_UPDATE</fullName>
    <active>true</active>
    <description>CCB Eligibility should not be update as None</description>
    <errorConditionFormula>AND(
    ISBLANK(TEXT(CCB_Eligibility__c )),
    ISCHANGED(CCB_Eligibility__c )
)</errorConditionFormula>
    <errorDisplayField>CCB_Eligibility__c</errorDisplayField>
    <errorMessage>You can&apos;t update the CCB Eligibility as None</errorMessage>
</ValidationRule>