force-app/main/default/objects/Contact/validationRules/Date_and_Consent_Obtained_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_and_Consent_Obtained_Required</fullName>
    <active>true</active>
    <description>Requires the Email Opt In Date and how Consent was obtained in Order to save a Canada Contact record.</description>
    <errorConditionFormula>AND(Email_Opt_In__c = TRUE,
RecordType.Name = &apos;Gypsum Canada Contact&apos;,
ISBLANK(Email_Opt_In_Date__c) || 
ISBLANK(TEXT(Consent_Obtained__c)))</errorConditionFormula>
    <errorDisplayField>Email_Opt_In__c</errorDisplayField>
    <errorMessage>An Email Opt In Date and Consent Obtained are required for CASL Compliance when Opt In is checked.</errorMessage>
</ValidationRule>