force-app/main/default/objects/Contact/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>Validation rule to require the first name on all new contacts.</description>
    <errorConditionFormula>AND(
RecordType.Name = &apos;CertainTeed Contact&apos;,

ISBLANK(FirstName)
)</errorConditionFormula>
    <errorMessage>Please enter a first name.</errorMessage>
</ValidationRule>