force-app/main/default/objects/Contact/validationRules/Last_Name_Must_Be_Valid_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Must_Be_Valid_Name</fullName>
    <active>true</active>
    <description>Enforce business rules that the contact must have a valid last name.  Users were entering an asterisk as a last name instead of trying to get the customer&apos;s actual last name in order to bypass the last name requirement.</description>
    <errorConditionFormula>AND(

RecordType.Name = &apos;CertainTeed Contact&apos;,

LastName = &quot;*&quot;
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>You must enter a valid last name!</errorMessage>
</ValidationRule>