force-app/main/default/objects/Contact/validationRules/Loyalty_Opt_In_Opt_Out_cant_both_be_true.validationRule-meta.xml
<ValidationRule>
    <fullName>Loyalty_Opt_In_Opt_Out_cant_both_be_true</fullName>
    <active>true</active>
    <description>Loyalty Opt In and Loyalty Opt Out cannot both be True</description>
    <errorConditionFormula>AND
((Loyalty_Opt_In__c = True),
(Loyalty_Opt_Out__c = True))</errorConditionFormula>
    <errorDisplayField>Loyalty_Opt_Out__c</errorDisplayField>
    <errorMessage>Loyalty Opt In and Loyalty Opt Out cannot both be checked.</errorMessage>
</ValidationRule>