force-app/main/default/objects/Contact/listViews/A2AllContacts_SO.listView-meta.xml
<ListView>
    <fullName>A2AllContacts_SO</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>A2 - All Contacts</label>
    <language>en_US</language>
</ListView>