force-app/main/default/objects/Contact/listViews/Architectural_US_Distribution_List.listView-meta.xml
<ListView>
    <fullName>Architectural_US_Distribution_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>Email_Opt_Out__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_COUNTRY</field>
        <operation>notEqual</operation>
        <value>Canada</value>
    </filters>
    <filters>
        <field>Active_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Former_Employee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Pricing_Notifications__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Email_Opt_Out__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Account.SAP_ACCOUNT__c</field>
        <operation>notEqual</operation>
        <value>1012754,1040935</value>
    </filters>
    <label>Architectural US Distribution List</label>
    <sharedTo>
        <group>Executive_Incident_Dashboard</group>
        <role>Ceilings_Marketing</role>
        <role>Ceilings_Pricing_Coordinators</role>
        <role>Customer_Service_Manager_US</role>
        <role>VP_of_Sales</role>
    </sharedTo>
</ListView>