force-app/main/default/objects/Contact/listViews/Atlanta_Territory_Shared_Contacts.listView-meta.xml
<ListView>
    <fullName>Atlanta_Territory_Shared_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>scofield,nagle,green</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>TNAGLE,BSCOFIEL,mgree</value>
    </filters>
    <label>Atlanta Territory Shared Contacts</label>
    <sharedTo>
        <group>Atlanta_Shared_View</group>
    </sharedTo>
</ListView>