force-app/main/default/objects/Contact/listViews/Berlin_Contacts.listView-meta.xml
<ListView>
    <fullName>Berlin_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>Contact_Notes__c</columns>
    <columns>Function__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Certainteed Insulation Group</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>NJ</value>
    </filters>
    <label>Berlin Contacts</label>
    <sharedTo>
        <role>PlanningTrafficWarehousingQuality</role>
        <role>SupplyChainOrderMgmtCustSvcMgmt</role>
        <role>SupplyChainOrderMgmtCustSvcRep</role>
        <role>SupplyChainOrderMgmtFeedbackSpec</role>
        <role>SupplyChainOrderMgmtSystemsAdmin</role>
    </sharedTo>
</ListView>