force-app/main/default/objects/Contact/listViews/BSP_Contacts.listView-meta.xml
<ListView>
    <fullName>BSP_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>BSP_Eligibility__c</columns>
    <columns>Partner_User_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BSP_Eligibility__c</field>
        <operation>equals</operation>
        <value>Eligible</value>
    </filters>
    <label>BSP Contacts</label>
    <sharedTo>
        <role>CRM_Administrator</role>
        <role>CertainTeed_Analyst_View_All_Data</role>
        <role>CertainTeed_Mgmt_View_All_Data</role>
    </sharedTo>
</ListView>