force-app/main/default/objects/Contact/listViews/C1_My_Contacts.listView-meta.xml
<ListView>
    <fullName>C1_My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <label>C1 - My Contacts</label>
    <language>en_US</language>
</ListView>