force-app/main/default/objects/Contact/listViews/Carrier_Contacts.listView-meta.xml
<ListView>
    <fullName>Carrier_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>C4 - Carrier Contacts</label>
</ListView>